--- a/EK2.html
+++ b/EK2.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ödev 1: Başvuru Formu</title>
+    <title>EK2</title>
     
-    <link rel="stylesheet" href="EK2.css"> 
-    
+    <link rel="stylesheet" href="EK2.css">
+
 </head>
 <body>
 
             <div class="form-container">
         <form onsubmit="formGonderildi(event)">
             <div class="form-group">
-                <div style="text-align: center">
-                <label for="deneme2">deneme2:</label>
-                <input type="text" id="deneme2" name="deneme2" required>
+                <div style="text-align: left">
+                <label for="GİRECEĞİNİZ METNİ YAZINIZ">GİRECEĞİNİZ METNİ YAZINIZ:</label>
+                <input type="text" id="GİRECEĞİNİZ METNİ YAZINIZ" name="GİRECEĞİNİZ METNİ YAZINIZ" required>
 
             </div>  
         </form>
